css/stylish-portfolio.css
/*!
 * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */

* {
/*    border: 1px solid black;
*/}

html,
body {
    width: 100%;
    height: 100%;
    background-color: rgb(213,219,224);
}

body {
    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
}

a:visited {
    color: black;
}

.navbar {
    background-color: rgb(49,45,85);

}

.navbar-default .navbar-brand {
    color: white;
}

.navbar-default .navbar-brand:hover {
    color: rgb(215, 217, 219);
}

.navbar-default .navbar-nav > li > a {
    color: white;
}

.navbar-default .navbar-nav > li > a:hover {
    color: rgb(215, 217, 219);
}

.navbar-default .navbar-nav > li > a:focus {
    color: rgb(215, 217, 219);
}

a.navbar-brand:visited {
    text-decoration: none;
    color: white;
}

a.col-sm-2: visited {
    color: black;
}

a.col-sm-2, mailto :visited {
    color: black;
}

.navbar-collapse {
   /* color: rgb(71,80,89);*/
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.text-vertical-center h1 {
    margin: 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
}

/* Custom Button Styles */

.btn-dark {
    border-radius: 0;
    color: #fff;
    background-color: rgba(0,0,0,0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: rgba(0,0,0,0.7);
}

.btn-light {
    border-radius: 0;
    color: #333;
    background-color: rgb(255,255,255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255,255,255,0.8);
}

/* Custom Horizontal Rule */

hr.small {
    max-width: 100px;
}


/* Header */

.header {
    display: table;
    position: relative;
    width: 100%;
    height: 100%;
    background: url(../imgs/rsz_1sunsetbanner.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

#top h1 {
    color: white;
    width: 60%;
    margin-left: 20%;
    border-radius: 5%;
}

#top h3 {
    color: white;
    width: 60%;
    margin-left: 20%;
    border-radius: 5%;
    margin-top: -5%;

}

#name-container {
    text-align: center;
    color: white;
    background-color: rgba(49,45,85,0.9);
    margin: auto;
    display: inline-block;
    padding: 2%;
}

#name {
    font-size: 4em;
}

#job {
    font-size: 3em;
}

/* About */

#about {
    padding: 3%;
    border: 1px rgb(49,45,85);
}

.facepic {
    vertical-align: middle;
    margin-top: 12%;
    border-radius: 5px;
}

/* Skills */

#skills {
    padding: 3%;
    background-color: rgb(49,45,85);
    color: white;
    border-bottom: 1px solid white;
}

.skills i, #contact i {
    font-size: 5em;
    text-align: center;
    vertical-align: middle;
    text-decoration: none;
}

.row {
    margin-right: 0px;
}

.skills-header {
    margin-bottom: 2%;
}

.skill-item {
    margin-bottom: 5%;
}

.skills .col-sm-2 {
    text-align: center;
    margin-bottom: 5%;
}

.icon {
    margin-left: 20%;
}
/* Projects */

#projects {
    padding: 50px 0;
    border: 1em rgb(49,45,85);
    background-color:  rgb(49,45,85);
}

#pouptube-jpg {
    margin-top: 12%;
}

#pouptube-title {
    margin-bottom: 10%;
}

#mtg-jpg {
    margin-top: 6%;
}

#mtg-title {
    margin-bottom: 6%;
}

.project-header {
    color: white;
}

.equal, .equal > div[class*='col-'] {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex:1 1 auto;
}

.project-item {
    margin-bottom: 2%;
    height: 30%;
    border-radius: 15px;
}

.img-portfolio {
    margin: auto;
    border: 1px rgb(49,45,85);
}

.portfolio-item {
    text-align: center;
    margin-bottom: 2%;
    background-color: rgb(213,219,224);
    color: black;
    height: 30%;
}

.img-portfolio-item {
    width: 30%;
    vertical-align: middle;
    display: block;
    margin-top: 2%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2%;
    border: 2px solid white;
    background-color: white;

}

/* Contact Info */

.contact-header {
    margin-bottom: 5%;
    color: white;
    background-color: rgb(49,45,85);
}

.social .col-sm-2 {
    text-align: center;
    margin-bottom: 10%;
}

.pdf a:visited {
    color: black;
}

.pdf a {
    color: black;
}

.mailto a:visited {
    color:black;
}

.mailto a {
    color: black;
}

/* Footer */

footer {
    padding: 100px 0;
}

.fa-5x {
    color: rgb(49,45,85);
    margin-top: 10%;
}

